// Use gen.sh to generate .pb.go files
syntax = "proto3";

package pb;

message KV {
    bytes key = 1;
    bytes value = 2;
    bytes user_meta = 3;
    uint64 version = 4;
    uint64 expires_at = 5;
    bytes meta = 6;
}

message KVList {
    repeated KV kv = 1;
}

message ManifestChangeSet {
    // A set of changes that are applied atomically.
    repeated ManifestChange changes = 1;
}

message ManifestChange {
    uint64 Id = 1;
    Operation Op = 2;
    enum Operation {
        CREATE = 0;
        DELETE = 1;
    }
    uint32 Level = 3;   // Only used for CREATE
    bytes Checksum = 4; // Only used FOr CREATE
}

message TableIndex {
    repeated BlockOffset offsets = 1;
    bytes bloom_filter = 2;
    uint64 max_version = 3;
    uint32 key_count = 4;
    uint32 stale_data_size = 5;
}

message BlockOffset {
    bytes key = 1;
    uint32 offset = 2;
    uint32 len = 3;
}